<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/id_bill_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/numTotal"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/id_tax_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/numTax"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/id_tip_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/numTip"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:onClick="calcTotals"
        android:text="@string/btnSubmit" />

</LinearLayout>
