<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_bill_total_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/labelTotal"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/id_tax_total_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:textSize="24sp"

        android:hint="@string/labelTax"
        />
    <TextView
        android:id="@+id/id_tip_total_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:textSize="24sp"

        android:gravity="bottom"
        android:hint="@string/labelTip"
        />
    <TextView
        android:id="@+id/id_grand_total_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:textSize="24sp"

        android:gravity="bottom"
        android:hint="@string/labelGrandTotal"
        />
</LinearLayout>
